Dev- completed swagger file and fix bugs
