# src/api/v1/user/controllers/create.js
@@ -4,22 +4,22 @@ const create = async (req, res, next) => {
   const { name, email, password } = req.body;
 
   try {
-    const user = await userService.create({ name, email, password });
+    const user = await userService.create({ name, email, password, status: 'approved' });
+    const data = {id:user.id, name:user.name, email:user.email};
 
     const response = {
-      code: 200,
-      messege: "User updated successfully",
-      data: user,
+      messege: "User created successfully",
+      data: data,
       links: {
-        self: `/user/${user._id}`,
-        appointments: `/appointments`
+        self: `/api/v1/users`,
+        appointments: `/api/v1/vaccines`
       },
     }
 
 
     res.status(200).json(response);
   } catch (error) {
-    console.log('here i suppose to be',);
+    console.log('error',);
     next(error);
   }
 };
