# src/api/v1/user/controllers/updateItem.js
@@ -6,14 +6,21 @@ const updateItem = async (req, res, next) => {
 
   try {
     const updatedUser = await userService.updateItem({ name, photo, passsword, id });
-
+    const responseData = {
+      id: updatedUser._id,
+      name: updatedUser.name,
+      email: updatedUser.email,
+      role: updatedUser.role,
+      createdAt: updatedUser.createdAt,
+      updatedAt: updatedUser.updatedAt
+    }
     const response = {
-      code: 200,
+
       messege: "User updated successfully",
-      data: updatedUser,
+      data: responseData,
       links: {
-        self: `/user/${id}`,
-        appointments: `/appointments`
+        self: `/api/v1//user/${id}`,
+        appointments: `/api/v1//appointments`
       },
     }
 
