# src/validators/review.js
@@ -1,5 +1,5 @@
 
-const { body, param } = require("express-validator");
+const { body, param, query } = require("express-validator");
 
 const createValidator = [
   body('body')
@@ -19,7 +19,37 @@ const findSingleItemValidator = [
     .escape(),
 ];
 
+const allreviewValidator = [
+  query("page")
+    .optional()
+    .isInt({ gt: 0, lt: 12000 })
+    .withMessage('Invalid query parameter'),
+
+  query("limit")
+    .optional()
+    .isInt({ gt: 0, lt: 12000 })
+    .withMessage('Invalid query parameter'),
+
+  query("sort_type")
+    .optional()
+    .isIn(['asc', 'dsc'])
+    .withMessage('Invalid query parameter'),
+
+  query("sort_by")
+    .optional()
+    .isIn(['createdAt', 'updatedAt', 'date', 'name', 'vaccine'])
+    .withMessage('Invalid query parameter'),
+
+  query("status")
+    .optional()
+    .isIn(['pending', 'approved', 'rejected'])
+    .withMessage('Invalid query parameter'),
+
+];
+
+
 module.exports = {
   createValidator,
-  findSingleItemValidator
+  findSingleItemValidator,
+  allreviewValidator
 }
